Fix Landing page width
(got cropped on small screens that are not small enough to get the mobile version)

--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -1,6 +1,6 @@
 .landing-page {
   display: flex;
-  width: 912px;
+  width: 609px; /* found this value at exactly 720px screen width (i.e. smallest "non-small" screen width) */
 }
 
 section {
